--- a/conda-envs/db-env.yml
+++ b/conda-envs/db-env.yml
@@ -145,4 +145,6 @@ dependencies:
   - zipp=3.4.1=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
+  - pip:
+    - docker-compose
 prefix: /home/larry/miniconda3/envs/db-env
