--- a/conda-envs/db-env.yml
+++ b/conda-envs/db-env.yml
@@ -16,8 +16,8 @@ dependencies:
   - boto3=1.17.41=pyhd3eb1b0_0
   - botocore=1.20.41=pyhd3eb1b0_1
   - brotlipy=0.7.0=py38h27cfd23_1003
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
+  - ca-certificates=2021.1.19=h06a4308_1
+  - certifi=2020.12.5=py38h06a4308_0
   - cffi=1.14.5=py38h261ae71_0
   - click=7.1.2=pyhd3eb1b0_0
   - cryptography=3.4.7=py38hd23ed53_0
@@ -36,6 +36,7 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=3.1=pyhd3eb1b0_0
   - importlib-metadata=3.7.3=py38h06a4308_1
+  - iniconfig=1.1.1=pyhd3eb1b0_0
   - intel-openmp=2020.2=254
   - ipykernel=5.3.4=py38h5ca1d4c_0
   - ipython=7.22.0=py38hb070fc8_0
@@ -76,6 +77,7 @@ dependencies:
   - mkl-service=2.3.0=py38he904b0f_0
   - mkl_fft=1.3.0=py38h54f3939_0
   - mkl_random=1.1.1=py38h0573a6f_0
+  - more-itertools=8.7.0=pyhd3eb1b0_0
   - mypy_extensions=0.4.3=py38_0
   - mysql-connector-c=6.1.11=h597af5e_1
   - mysqlclient=2.0.3=py38h2531618_1
@@ -101,10 +103,12 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=8.1.2=py38he98fc37_0
   - pip=21.0.1=py38h06a4308_0
+  - pluggy=0.13.1=py38h06a4308_0
   - prometheus_client=0.9.0=pyhd3deb0d_0
   - prompt-toolkit=3.0.17=pyh06a4308_0
   - psycopg2=2.8.6=py38h3c74f83_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py=1.10.0=pyhd3eb1b0_0
   - pycodestyle=2.6.0=pyhd3eb1b0_0
   - pycparser=2.20=py_2
   - pyflakes=2.2.0=pyhd3eb1b0_0
@@ -114,6 +118,7 @@ dependencies:
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.17.3=py38h25fe258_1
   - pysocks=1.7.1=py38h06a4308_0
+  - pytest=6.2.3=py38h06a4308_2
   - python=3.8.8=hdb3f193_4
   - python-dateutil=2.8.1=pyhd3eb1b0_0
   - python_abi=3.8=1_cp38
@@ -145,6 +150,4 @@ dependencies:
   - zipp=3.4.1=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
-  - pip:
-    - docker-compose
 prefix: /home/larry/miniconda3/envs/db-env
