--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,3 +1,7 @@
 [user]
 	name = larry
 	email = JLawrenceB1@gmail.com
+[merge]
+    tool = emerge
+[mergetool "emerge"]
+    path = ~/.emacs.d/emerge-for-git
